# MLFQ

./: CMakeLists.txt  README.md  main.cpp
src/: Configuration.cpp  Configuration.h  MLFQ  MLFQ.cpp  MLFQ.h  Process.cpp  Process.h  Queue.cpp  Queue.h
